# ai-internship-project

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md  draft.py  main.py  pyproject.toml
docs/decisions/: adr000-request.md  adr001-inference.md
docs/designs/: DESIGN.md
docs/progress/: future-tasks.md  week1-tasks.md  week2-tasks.md  week3-discussion.md
docs/retro/: week1-retro.md  week2-retro.md
docs/templates/: BACKLOG-template.md  adr-template.md  design-doc.md  task-spec.md
inferenceLM/data/: request.py  request_status.py  tokenized_data.py
inferenceLM/engine/: inference_engine.py  lm_engine.py
inferenceLM/request_receiver/: request_receiver.py  request_reciever.py  tokenizer.py
tests/: data_flow_test.py  inference_engine_test.py  lm_engine_test.py  request_receiver_test.py  request_test.py  tokenize_data_test.py  tokenizer_test.py
