[project]
name = "ai-internship-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jaxtyping>=0.3.9",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "torch>=2.11.0",
    "transformers>=5.5.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.setuptools.packages.find]
where = ["."]
